          possibly incorrect positive answer when there are at least 2 related
          binary packages and some of them have the same source version as
          the original binary package.
        - Prepare stick requests after possible dropping solutions due to
          'cupt::resolver::synchronize-source-version' set to hard. Gives more
          room for upgrades in some cases.
      - State:
        - Don't store version strings of installed packages, but request them
          from cache when needed.
    - Cache:
      - [API break] 'get_binary_packages': superseded by new
        'get_binary_package_names' method.
      - [API break] 'get_source_packages': superseded by new
        'get_source_package_names' method.
      - Create Cupt::Cache::Package objects only by demand. Reduced time to
        build a cache by 5-10%.
      - 'new': added the switch '-allow-reinstall'. 
      - Package:
        - Changed internal structure to hold additonal parameters.
        - [API break] 'o_binary_architecture': removed, not needed anymore.
        - New module option 'o_memoize' to memoize parsed versions.
    - Config:
      - Added the configuration variable 'apt::get::assume-yes'.
      - New configuration variable 'cupt::console::assume-yes'.
      - New configuration variable 'cupt::console::allow-untrusted'.
  * Makefile.PL, debian/control:
    - Dropped the dependency on libgraph-perl.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 14 Oct 2009 20:10:26 +0300

cupt (1.0.0) unstable; urgency=low

  * cupt:
    - Action preview prompt:
      - Output also 'Suggests' relation expressions in 'leave unresolved'
        check.
      - Output unresolved dependencies for a dependency group <dep> only if
        the option 'cupt::resolver::keep-<dep>' is set to true.
    - Managing packages:
      - Fixed shell wildcards when scheduling removal of packages which
        are not installed.
  * Cupt:
    - Cache: